// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Sync application should fail due to object system fields integrity should fail when trying to delete a system field after a successful sync 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "FIELD_MUTATION_NOT_ALLOWED",
              "message": "System fields cannot be deleted",
              "userFriendlyMessage": "System fields cannot be deleted",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "id",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "delete",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "System fields cannot be deleted",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail due to object system fields integrity should fail when trying to update a system field after a successful sync 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "FIELD_MUTATION_NOT_ALLOWED",
              "message": "System fields only allow updating: universalSettings, isActive. Forbidden properties: label",
              "userFriendlyMessage": "System fields cannot be updated",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "id",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "System fields cannot be updated",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail due to object system fields integrity when label identifier is non-searchable type (searchVector has no expression) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Field type TS_VECTOR must have an expression. This may have failed to be built because record identifier field does not exist or is not of a searchable type.",
              "userFriendlyMessage": "Field type TS_VECTOR must have an expression. This may have failed to be built because record identifier field does not exist or is not of a searchable type.",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "searchVector",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field searchVector is missing",
              "userFriendlyMessage": "System field searchVector is missing",
              "value": "searchVector",
            },
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "labelIdentifierFieldMetadataUniversalIdentifier validation failed: field type not compatible",
              "userFriendlyMessage": "Field cannot be used as label identifier due to its type: should be of type UUID, text or full name",
            },
          ],
          "flatEntityMinimalInformation": {
            "namePlural": "noSearchVectorExpressions",
            "nameSingular": "noSearchVectorExpression",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "objectMetadata",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata, 1 objectMetadata",
    "summary": {
      "fieldMetadata": 1,
      "objectMetadata": 1,
      "totalErrors": 2,
    },
    "userFriendlyMessage": "Many validation errors",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail due to object system fields integrity when object has TS_VECTOR field with wrong name (not searchVector) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Field type TS_VECTOR must be named "searchVector", got "wrongSearchVector"",
              "userFriendlyMessage": "Field type TS_VECTOR must be named "searchVector"",
              "value": "wrongSearchVector",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Field type TS_VECTOR must be a system field",
              "userFriendlyMessage": "Field type TS_VECTOR must be a system field",
              "value": false,
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "wrongSearchVector",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field searchVector is missing",
              "userFriendlyMessage": "System field searchVector is missing",
              "value": "searchVector",
            },
          ],
          "flatEntityMinimalInformation": {
            "namePlural": "wrongTsVectorNames",
            "nameSingular": "wrongTsVectorName",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "objectMetadata",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata, 1 objectMetadata",
    "summary": {
      "fieldMetadata": 1,
      "objectMetadata": 1,
      "totalErrors": 2,
    },
    "userFriendlyMessage": "Many validation errors",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail due to object system fields integrity when object has id field with wrong type (TEXT instead of UUID) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_SYSTEM_FIELD",
              "message": "System field id has invalid type: expected UUID, got TEXT",
              "userFriendlyMessage": "System field id has invalid type",
              "value": "TEXT",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field createdAt is missing",
              "userFriendlyMessage": "System field createdAt is missing",
              "value": "createdAt",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field updatedAt is missing",
              "userFriendlyMessage": "System field updatedAt is missing",
              "value": "updatedAt",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field deletedAt is missing",
              "userFriendlyMessage": "System field deletedAt is missing",
              "value": "deletedAt",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field createdBy is missing",
              "userFriendlyMessage": "System field createdBy is missing",
              "value": "createdBy",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field updatedBy is missing",
              "userFriendlyMessage": "System field updatedBy is missing",
              "value": "updatedBy",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field position is missing",
              "userFriendlyMessage": "System field position is missing",
              "value": "position",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field searchVector is missing",
              "userFriendlyMessage": "System field searchVector is missing",
              "value": "searchVector",
            },
          ],
          "flatEntityMinimalInformation": {
            "namePlural": "wrongIdTypeObjects",
            "nameSingular": "wrongIdTypeObject",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "objectMetadata",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 objectMetadata",
    "summary": {
      "objectMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "System field id has invalid type",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail due to object system fields integrity when object has position field with wrong type (TEXT instead of POSITION) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field id is missing",
              "userFriendlyMessage": "System field id is missing",
              "value": "id",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field createdAt is missing",
              "userFriendlyMessage": "System field createdAt is missing",
              "value": "createdAt",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field updatedAt is missing",
              "userFriendlyMessage": "System field updatedAt is missing",
              "value": "updatedAt",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field deletedAt is missing",
              "userFriendlyMessage": "System field deletedAt is missing",
              "value": "deletedAt",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field createdBy is missing",
              "userFriendlyMessage": "System field createdBy is missing",
              "value": "createdBy",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field updatedBy is missing",
              "userFriendlyMessage": "System field updatedBy is missing",
              "value": "updatedBy",
            },
            {
              "code": "INVALID_SYSTEM_FIELD",
              "message": "System field position has invalid type: expected POSITION, got TEXT",
              "userFriendlyMessage": "System field position has invalid type",
              "value": "TEXT",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field searchVector is missing",
              "userFriendlyMessage": "System field searchVector is missing",
              "value": "searchVector",
            },
          ],
          "flatEntityMinimalInformation": {
            "namePlural": "wrongPositionObjects",
            "nameSingular": "wrongPositionObject",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "objectMetadata",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 objectMetadata",
    "summary": {
      "objectMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "System field id is missing",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail due to object system fields integrity when object has searchVector field with wrong type (TEXT instead of TS_VECTOR) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_SYSTEM_FIELD",
              "message": "System field searchVector has invalid type: expected TS_VECTOR, got TEXT",
              "userFriendlyMessage": "System field searchVector has invalid type",
              "value": "TEXT",
            },
          ],
          "flatEntityMinimalInformation": {
            "namePlural": "wrongSearchVectorTypes",
            "nameSingular": "wrongSearchVectorType",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "objectMetadata",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 objectMetadata",
    "summary": {
      "objectMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "System field searchVector has invalid type",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail due to object system fields integrity when object is created without any system fields (missing all 8 system fields) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field id is missing",
              "userFriendlyMessage": "System field id is missing",
              "value": "id",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field createdAt is missing",
              "userFriendlyMessage": "System field createdAt is missing",
              "value": "createdAt",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field updatedAt is missing",
              "userFriendlyMessage": "System field updatedAt is missing",
              "value": "updatedAt",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field deletedAt is missing",
              "userFriendlyMessage": "System field deletedAt is missing",
              "value": "deletedAt",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field createdBy is missing",
              "userFriendlyMessage": "System field createdBy is missing",
              "value": "createdBy",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field updatedBy is missing",
              "userFriendlyMessage": "System field updatedBy is missing",
              "value": "updatedBy",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field position is missing",
              "userFriendlyMessage": "System field position is missing",
              "value": "position",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field searchVector is missing",
              "userFriendlyMessage": "System field searchVector is missing",
              "value": "searchVector",
            },
          ],
          "flatEntityMinimalInformation": {
            "namePlural": "noSystemFieldsObjects",
            "nameSingular": "noSystemFieldsObject",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "objectMetadata",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 objectMetadata",
    "summary": {
      "objectMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "System field id is missing",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail due to object system fields integrity when object miss default fields 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field id is missing",
              "userFriendlyMessage": "System field id is missing",
              "value": "id",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field createdAt is missing",
              "userFriendlyMessage": "System field createdAt is missing",
              "value": "createdAt",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field updatedAt is missing",
              "userFriendlyMessage": "System field updatedAt is missing",
              "value": "updatedAt",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field deletedAt is missing",
              "userFriendlyMessage": "System field deletedAt is missing",
              "value": "deletedAt",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field createdBy is missing",
              "userFriendlyMessage": "System field createdBy is missing",
              "value": "createdBy",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field updatedBy is missing",
              "userFriendlyMessage": "System field updatedBy is missing",
              "value": "updatedBy",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field position is missing",
              "userFriendlyMessage": "System field position is missing",
              "value": "position",
            },
            {
              "code": "MISSING_SYSTEM_FIELD",
              "message": "System field searchVector is missing",
              "userFriendlyMessage": "System field searchVector is missing",
              "value": "searchVector",
            },
          ],
          "flatEntityMinimalInformation": {
            "namePlural": "wrongCreatedAtObjects",
            "nameSingular": "wrongCreatedAtObject",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "objectMetadata",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 objectMetadata",
    "summary": {
      "objectMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "System field id is missing",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;
